Fix submenu visibility when collapsed

--- a/src/scss/partials/_sidebar.scss
+++ b/src/scss/partials/_sidebar.scss
@@ -6,7 +6,6 @@
   text-align: left;
   transition: width 0.3s;
   position: relative;
-  overflow-y: auto;
   > img.sidebar-bg {
     width: 100%;
     height: 100%;
